fix footer on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -24,8 +24,18 @@ a:visited {
   display: none;
 }
 
+.site-footer {
+  padding-bottom: 0px;
+}
+
 .footer-heading {
   display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .footer-col {
+    float: left;
+  }
 }
 
 .footer-col-1 {
